# lienzo

./: .gitignore  CMakeLists.txt  DEPLOYMENT.md  Makefile  RUN.md  package.json  readme.md  technical-spec.md  vercel.json
docs/: ARCHITECTURE.md  CODE_STRUCTURE.md  CRDT_ARCHITECTURE.md  CRDT_IMPLEMENTATION.md  CRDT_VS_JAVASCRIPT.md  DEVELOPMENT.md
examples/: styles.css
scripts/: build-vercel.js
src/ai/: chat.cpp  chat.h
src/canvas/: canvas.cpp  canvas.h  renderer.cpp  renderer.h
src/collaboration/: crdt.cpp  crdt.h  dom_graph.cpp  dom_graph.h
src/core/: frame.cpp  frame.h  selection.cpp  selection.h  vector.cpp  vector.h  vector_crdt.cpp  vector_crdt.h
src/plugins/: plugin.cpp  plugin.h
src/wasm/: crdt_bindings.cpp  crdt_bindings.h  main.cpp
